MMA-7864 Legg til mulighet til å spesifisere dokumenter i KnyttTilAnnenSakRequest